# smart-prompt

./: .codespellrc  .editorconfig  .gitattributes  .gitignore  .gitlint  .mailmap  .markdownlint.yaml  .pre-commit-config.yaml  .reuse-hdrmap.json  .reuse-hdrmap.yaml  .shellcheckrc  .typos.toml  .yamllint.yaml  CMakeLists.txt  ChangeLog.md  LICENSE  README.md  REUSE.toml  cdui-feed.sh  cdui.sh.in  charmap.bash.in  charmap.bash.in.license  charmaps.yaml  hotlist2json.awk  json2bash-functions.cmake  quick-cd-sk.sh  quick-cd.sh  smart-prompt-functions.sh  smart-prompt-grep.inputrc  smart-prompt-rg.inputrc  smart-prompt.conf  smart-prompt.inputrc  smart-prompt.inputrc.in  smart-prompt.sh.in  yaml2json.cmake
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: pre-commit-check.yaml  pre-commit-update.yaml
.reuse/templates/: hash.jinja2  hash.jinja2.license
cdui.d/: env-plugin.sh  git-worktrees-plugin.sh  hotlist-plugin.sh  recent-plugin.sh
cmake/: GetDistribInfo.cmake  GetKeyValueFromShellLikeConfig.cmake
context-checkers.d/: 00debian_chroot.sh  00debian_chroot_d.sh  00debian_chroot_s.sh  00schroot.sh  00terminal-multiplexers.sh  01user@host.sh  02pwd.sh  40cmake-build-dir.sh  41nodejs-project-dir.sh  50git.sh  52svn.sh  60system-dirs.sh  62schroot.sh  70-exherbo-system-dirs.sh  70gentoo-system-dirs.sh  70paludis.sh  70portage.sh  75openrc.sh  75systemd.sh  80virtualenv.sh  99prev-cmd-exit-code.sh
